<resources>

    <!--string name="APP Name">com.shahartal.myquietchannel</string>
    <string name="PLAY_TITLE">My quiet wave</string>
    <string name="PLAY_SHORT_DESCRIPTION">Almost like the Quiet Wave, only the news of the hour (without alerts).</string>
    <string name="PLAY_FULL_DESCRIPTION">Stay informed in times of emergency....</string-->
    <!-- keep in mind to not translate the hebCal constants for fixed locations -->

    <string name="app_name">My quiet wave</string>
    <string name="appName">My quiet wave</string>
    <string name="title_name">My quiet wave 📻</string>

    <string name="title_name_enabled">My quiet wave %1$s 📻 Enabled</string>
    <string name="title_name_disabled">My quiet wave %1$s 📻 Disabled</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="instructions">Manually start your radio app. Click on the top *Start*. From now on, when the news ends - the audio will be muted. \n\nYou can choose whether to manually launch a radio app of your choice, or listen to one of the radio stations from this app.</string>
    <string name="nextNews">Upcoming news</string>
    <string name="newsLink">Useful links</string>
    <string name="shabbath">🕯🕯 Shabbat Shalom 🕯🕯</string>
    <string name="justListen">Enjoy</string>
    <string name="todoList">To do list 📝</string>

    <string name="newsLength">News Length in Minutes (1..6) ⏱️</string>

    <string name="next_30_sec">Now - for the next 30 seconds - set the volume at which you want to hear the news. The radio will then mute and wake up automatically at the appropriate times.</string>
    <string name="next_30_sec_with_sec">Now - for the next %1$d seconds - set the volume %2$d (out of 100) at which you want to hear the news. The radio will then mute and wake up automatically at the appropriate times.</string>

    <string name="alert_title">Is the radio app playing? Maybe the volume is at zero?!</string>
    <string name="alert_message">You should turn on the appropriate radio app by yourself, otherwise, by default, the selected station will be used</string>

    <string name="close_alert">Close</string>
    <string name="haftarah_connection">Parasha-Haftara connection</string>
    <string name="haftarah_connection_loading">Loading...</string>

    <string name="haftarah_connection_waiting_for_shabbat">Loading Shabbat information...</string>
    <string name="haftarah_connection_no_regular_parasha">%1$s falls on Shabbat, so there is no regular weekly parasha.</string>
    <string name="haftarah_connection_shabbat_load_failed">Unable to load Shabbat information.</string>
    <string name="haftarah_connection_content_load_failed">Unable to load the connection content.</string>
    <string name="pastTime">Past time</string>

<!--    <string name="haftarah_connection_error">לא הצלחנו לטעון את התוכן. אפשר לפתוח את המקור בקישור למטה.</string>-->
<!--    <string name="haftarah_connection_source">למקור באתר כל קורא</string>-->

    <string name="current_song">Now playing..</string>
    <string name="next_song">Next playing: </string>
    <string name="peek_songs">Peek at current song</string>

    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="share_text">Check out this nice app:</string>

    <string name="candleLighting">Candle Lighting 🕯️</string>
    <string name="havdalah">Havdalah 🌠</string>

    <string name="sunrise">Sunrise 🔆</string>
    <string name="sunset">Sunset 🌅</string>

    <string name="location">Location 📍</string>

    <!-- notifications -->

    <string name="notif_title_1">My quiet wave - In action</string>
    <string name="notif_text_1">Cycling volume every X hours</string>

    <string name="notif_title_2">My quiet wave - set the volume</string>
    <string name="notif_text_2">%1$d seconds left to set the volume. Current value is %2$d (out of 100)</string>

    <string name="notif_text_4">Low volume %2$d (out of 100) audio for the upcoming %1$d minutes</string>
    <string name="notif_text_4_1">Low volume %1$d (out of 100) audio for the upcoming minute</string>

    <string name="notif_text_5">Silent, till the next news</string>
    <string name="notif_text_radio_stopped">Silent, till the next news</string>
<!--    <string name="notif_text_radio_stopped">The radio app is not playing anymore, you should replay it. As a default, the selected GLZ station will be used</string>-->
    <!--    <string name="notif_text_6">Playing the current news</string>-->

    <string name="ue_usage">Add ,ue for use elevation in the calculations</string>

    <string name="station">Station</string>

    <string name="radioPlayer">Ignore the \'Upcoming news\' text field\n      Just play continuously the radio</string>

    <string name="instructions2">You can also play the radio right now</string>

    <string-array name="stations">
        <item>גלגלצ</item>
        <item>גלי צהל</item>
        <item>רשת ב</item>
        <item>רשת ג</item>
<!--        <item>FM102</item>-->
        <item>גלי ישראל</item>
        <item>כאן 88</item>
        <item>קול חי</item>
        <item>קול חי מיוזיק</item>
        <item>קול ברמה</item>
        <item>כאן מורשת</item>
    </string-array>

    <string-array name="locations">
        <item>IL-ירושלים</item>
        <item>IL-תל אביב</item>
        <item>IL-חיפה</item>
        <item>IL-באר שבע</item>
        <item>IL-אילת</item>
        <item> </item>
        <item>Geo/ GPS-Lat, Lon</item>
        <item> </item>
        <item>IL-אשדוד</item>
        <item>IL-אשקלון</item>
        <item>IL-בית שמש</item>
        <item>IL-ביתר עילית</item>
        <item>IL-בני ברק</item>
        <item>IL-בת ים</item>
        <item>IL-הרצליה</item>
        <item>IL-חדרה</item>
        <item>IL-חולון</item>
        <item>IL-טבריה</item>
        <item>IL-יבנה</item>
        <item>IL-כפר סבא</item>
        <item>IL-לוד</item>
        <item>IL-מודיעין</item>
        <item>IL-מודיעין עילית</item>
        <item>IL-מצפה רמון</item>
        <item>IL-נצרת</item>
        <item>IL-נתניה</item>
        <item>IL-פתח תקוה</item>
		<item>IL-צפת</item>
        <item>IL-ראשון לציון</item>
        <item>IL-רמלה</item>
        <item>IL-רמת גן</item>
        <item>IL-רעננה</item>
        <item> </item>
        <item>US-Atlanta-GA</item>
        <item>US-Austin-TX</item>
        <item>US-Baltimore-MD</item>
        <item>US-Boston-MA</item>
        <item>US-Buffalo-NY</item>
        <item>US-Chicago-IL</item>
        <item>US-Cincinnati-OH</item>
        <item>US-Cleveland-OH</item>
        <item>US-Columbus-OH</item>
        <item>US-Dallas-TX</item>
        <item>US-Denver-CO</item>
        <item>US-Detroit-MI</item>
        <item>US-Hartford-CT</item>
        <item>US-Honolulu-HI</item>
        <item>US-Houston-TX</item>
        <item>US-Lakewood-NJ</item>
        <item>US-Las Vegas-NV</item>
        <item>US-Livingston-NY</item>
        <item>US-Los Angeles-CA</item>
        <item>US-Memphis-TN</item>
        <item>US-Miami-FL</item>
        <item>US-Milwaukee-WI</item>
        <item>US-Monsey-NY</item>
        <item>US-New Haven-CT</item>
        <item>US-New York-NY</item>
        <item>US-Omaha-NE</item>
        <item>US-Orlando-FL</item>
        <item>US-Passaic-NJ</item>
        <item>US-Philadelphia-PA</item>
        <item>US-Phoenix-AZ</item>
        <item>US-Pittsburgh-PA</item>
        <item>US-Portland-OR</item>
        <item>US-Providence-RI</item>
        <item>US-Richmond-VA</item>
        <item>US-Rochester-NY</item>
        <item>US-Saint Louis-MO</item>
        <item>US-Saint Paul-MN</item>
        <item>US-San Diego-CA</item>
        <item>US-San Francisco-CA</item>
        <item>US-Seattle-WA</item>
        <item>US-Silver Spring-MD</item>
        <item>US-Teaneck-NJ</item>
        <item>US-Washington-DC</item>
        <item>US-White Plains-NY</item>
        <item> </item>
        <item>CA-Calgary</item>
        <item>CA-Edmonton</item>
        <item>CA-Halifax</item>
        <item>CA-Mississauga</item>
        <item>CA-Montreal</item>
        <item>CA-Ottawa</item>
        <item>CA-Quebec City</item>
        <item>CA-Regina</item>
        <item>CA-Saskatoon</item>
        <item>CA-Toronto</item>
        <item>CA-Vancouver</item>
        <item>CA-Victoria</item>
        <item>CA-Winnipeg</item>
        <item> </item>
        <item>FR-Marseilles</item>
        <item>FR-Paris</item>
        <item> </item>
        <item>GB-Belfast</item>
        <item>GB-Birmingham</item>
        <item>GB-Bristol</item>
        <item>GB-Cardiff</item>
        <item>GB-Edinburgh</item>
        <item>GB-Glasgow</item>
        <item>GB-Leeds</item>
        <item>GB-Liverpool</item>
        <item>GB-London</item>
        <item>GB-Manchester</item>
        <item>GB-Sheffield</item>
        <item> </item>
        <item>AR-Buenos Aires</item>
        <item>AR-Cordoba</item>
        <item>AR-Rosario</item>
        <item> </item>
        <item>AU-Adelaide</item>
        <item>AU-Brisbane</item>
        <item>AU-Canberra</item>
        <item>AU-Gold Coast</item>
        <item>AU-Hobart</item>
        <item>AU-Melbourne</item>
        <item>AU-Perth</item>
        <item>AU-Sydney</item>
        <item> </item>
        <item>IT-Milano</item>
        <item>IT-Rome</item>
        <item> </item>
        <item>IE-Dublin</item>
        <item> </item>
        <item>BE-Brussels</item>
        <item> </item>
        <item>CL-Santiago</item>
        <item> </item>
        <item>CR-San Jose</item>
        <item> </item>
        <item>CY-Nicosia</item>
        <item> </item>
        <item>CZ-Prague</item>
        <item> </item>
        <item>DE-Berlin</item>
        <item>DE-Hamburg</item>
        <item>DE-Munich</item>
        <item> </item>
        <item>GE-Tbilisi</item>
        <item> </item>
        <item>GI-Gibraltar</item>
        <item> </item>
        <item>GR-Athens</item>
        <item> </item>
        <item>HK-Hong Kong</item>
        <item> </item>
        <item>HR-Zagreb</item>
        <item> </item>
        <item>HU-Budapest</item>
        <item> </item>
        <item>LU-Luxemburg</item>
        <item> </item>
        <item>NL-Amsterdam</item>
        <item> </item>
        <item>NO-Oslo</item>
        <item> </item>
        <item>NZ-Auckland</item>
        <item>NZ-Christchurch</item>
        <item>NZ-Wellington</item>
        <item> </item>
        <item>PA-Panama City</item>
        <item> </item>
        <item>PE-Lima</item>
        <item> </item>
        <item>PT-Lisbon</item>
        <item> </item>
        <item>RO-Bucharest</item>
        <item> </item>
        <item>RS-Belgrade</item>
        <item> </item>
        <item>RU-Moscow</item>
        <item>RU-Novosibirsk</item>
        <item>RU-Saint Petersburg</item>
        <item>RU-Yekaterinburg</item>
        <item> </item>
        <item>SE-Stockholm</item>
        <item> </item>
        <item>SG-Singapore</item>
        <item> </item>
        <item>SK-Bratislava</item>
        <item> </item>
        <item>PL-Warsaw</item>
        <item> </item>
        <item>UA-Kharkiv</item>
        <item>UA-Kiev</item>
        <item> </item>
        <item>IN-Ahmadabad</item>
        <item>IN-Bangalore</item>
        <item>IN-Bombay</item>
        <item>IN-Calcutta</item>
        <item>IN-Chennai</item>
        <item>IN-Cochin</item>
        <item>IN-Hyderabad</item>
        <item>IN-Jaipur</item>
        <item>IN-Kanpur</item>
        <item>IN-New Delhi</item>
        <item>IN-Pune</item>
        <item>IN-Surat</item>
    </string-array>

</resources>
